<resources>
    <string name="app_name">LittleSpoon</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="agecategory">Age Category</string>
    <string name="foodcategory">Food Category</string>
    <string name="Procategory">Process Type Category</string>
    <string name="textPanjang">ini adalah text yang sangat panjang sekali harap membaca dengan seksama, 1,2 ,3 , mari ulangi pelan2 bersama satu dua tiga empat lima enam</string>
    <string name="recipe">puree kentang spesial ala mama rub</string>
    <string name="recipeshort">puree kentang spesial</string>
    <string name="editprof">Edit profile</string>
    <string name="editorsPick">Editor\'s pick</string>
    <string name="showmore">show more</string>
    <string name="mashpotato">Mash Potato</string>
    <string name="bahan">Ingredients</string>
    <string name="How">Directions</string>
    <string name="direction">direction</string>
    <string name="bulan">bulan</string>
    <string name="like">50 like</string>
    <string name="share">Share</string>
    <string name="mamagina">Mama gina</string>
    <string name="harilalu">5 hari yang lalu</string>
    <string name="bubur">bubur</string>
    <string name="kategori">kategori</string>
    <string name="haloberghie">halo berghie</string>
    <string name="favorit">Favorit recipes</string>
    <string name="award">My award</string>
    <string name="namerecipe">Recipe name</string>
    <string name="ingredients">ingredients</string>
    <string name="addimage">add image</string>
    <string name="image">image</string>
    <string name="add_recipe">add recipe</string>
    <string name="mypage">My Page</string>
    <string name="token">token</string>
    <string name="userid">userid</string>
</resources>
