<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:background="@color/blue"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:text="Fatimah Ruby"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dokter spesialis anak"
                android:textSize="10dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="anything@tumblr.gmail.com"
                android:textSize="10dp"
                android:layout_marginBottom="8dp"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_dark"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:textSize="11sp"
                android:text="@string/editprof"
                android:layout_marginRight="8dp"
                android:background="@drawable/rounded_text3"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="100"
                android:textSize="25dp"/>
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="recipes"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="5"
                android:textSize="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="awards"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="50"
                android:textSize="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Favorites"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorit"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/favorit"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:scrollbars="vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/award"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/award"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:scrollbars="vertical" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kategori"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:scrollbars="vertical" />
    </LinearLayout>



    <android.support.v7.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:numColumns="2"
        android:id="@+id/result">

    </GridView>


</LinearLayout>
</ScrollView>
