<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="match_parent"
            android:layout_width="match_parent">


            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context="ruby.com.littlespoon.view.MainActivity">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/search"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/search"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/rounded_edit_text"
                            android:padding="10dp"
                            android:layout_margin="5dp"
                            android:textSize="13sp" />

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:paddingBottom="0dp"
                            android:paddingLeft="0dp"
                            android:paddingRight="0dp"
                            android:paddingTop="0dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="15dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/filter"
                            android:text="Filter"
                            android:textSize="12sp" />





                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_margin="5dp"
                        android:text="Find in all category"
                        android:id="@+id/all"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_margin="5dp"
                        android:text="@string/agecategory" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/agecategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal"
                        android:layout_margin="5dp"
                        android:scrollbars="vertical"
                        android:visibility="visible"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_margin="5dp"
                        android:text="@string/foodcategory" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/fcategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal"
                        android:layout_margin="5dp"
                        android:scrollbars="vertical" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_margin="5dp"
                        android:text="@string/Procategory" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/procategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal"
                        android:layout_margin="5dp"
                        android:scrollbars="vertical" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/result"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                    </android.support.v7.widget.RecyclerView>

                    <Button
                        android:id="@+id/apply"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="60dp"
                        android:layout_marginRight="60dp"
                        android:text="Apply Filter" />

                </LinearLayout>


                <android.support.design.widget.BottomNavigationView
                    android:id="@+id/navigation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="0dp"
                    android:background="?android:attr/windowBackground"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:menu="@menu/navigation" />

            </LinearLayout>



        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
